# gitdupan

./: .gitignore  .python-version  README.md  build.bat  gitdupan.spec  pyproject.toml
.github/workflows/: release.yml
serverless/cloudflare-worker/: wrangler.toml
serverless/cloudflare-worker/.wrangler/cache/: wrangler-account.json
serverless/cloudflare-worker/src/: index.js
src/gitdupan/: cli.py
src/gitdupan/core/: __init__.py  auth.py  pack.py  remote.py  repo.py  sync.py
src/gitdupan/utils/: hash.py  ignore.py  update.py
tests/: test_ignore.py  test_local.py  test_sync.py
